--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,10 @@
       content="Fresh Mediterranean dishes served daily in Chicago."
     />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700;800&family=Markazi+Text:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Seitentitel -->
     <title>Little Lemon Restaurant</title>
